2006-05-17  David Bateman  <dbateman@free.fr>

	* general/cplxpair.m, general/trapz.m, general/cumtrapz.m,
	general/isdir.m, miscellaneous/dos.m, miscellaneous/getfield.m,
	miscellaneous/setfield.m, plot/fplot.m, set/intersect.m,
	signal/ifftshift.m, signal/filter2.m, specfun/betaln.m,
	specfun/factorial.m, strings/strvcat.m: New files from Octave
	Forge.

2006-05-11  John W. Eaton  <jwe@octave.org>

	* path/path.m: Delete (now a built-in function).

	* pkg/Makefile.in: New file.
	* configure.in (AC_CONFIG_FILES): Add pkg/Makefile to the list.
	* Makefile.in (SUBDIRS): Add pkg to the list.

2006-05-10  John W. Eaton  <jwe@octave.org>

	* tar.m, untar.m, unzip.m: Adapt to Octave coding style.
	* tar.m, untar.m: Only tar; don't compress or uncompress.

2006-05-10  Soren Hauberg  <hauberg@gmail.com>

	* tar.m, untar.m, unzip.m: New files.

2006-05-10  John W. Eaton  <jwe@octave.org>

	* path/addpath.m, path/rmpath.m: Improve compatibility.
	* path/setpath.m: Delete.

	* pkg/pkg.m: New file.

2006-05-09  Keith Goodman  <kwgoodman@gmail.com>

	* plot/plot.m: Doc string fix.

2006-05-09  Paul Kienzle  <pkienzle@users.sf.net>

	* testfun/speeed.m: Use new interface to unique and assert.
	Improve documentation.  Approximate time complexity from log-log
	plot.  Return time complexity and raw times if requested.  The
	mean ratio is no longer returned.  Provide complete control over
	which n are computed.

2006-05-09  John W. Eaton  <jwe@octave.org>

	* path/path.m: Move here from miscellaneous.
	Adapt to new LOADPATH definition.

2006-05-03  David Bateman  <dbateman@free.fr>

	* path/rmpath.m, path/addpath.m, miscellaneous/path.m: Replace all
	explicit uses of a path seperation character with pathsep().

2006-05-03  Bob Weigel <rweigel@gmu.edu>

        * scripts/set/setdiff.m: New arg, byrows.  New tests.

2006-04-29  John W. Eaton  <jwe@octave.org>

	* startup/main-rcfile: Disable some warnings.

2006-04-14  Bill Denney  <denney@seas.upenn.edu>
