@@ -1,3 +1,8 @@
+2006-05-17  John W. Eaton  <jwe@octave.org>
+
+	* set/intersection.m: Delete
+	* deprecated/intersection.m: New file.
+
 2006-05-17  David Bateman  <dbateman@free.fr>
 
 	* general/cplxpair.m, general/trapz.m, general/cumtrapz.m,
